--- a/idlua-8-15.properties
+++ b/idlua-8-15.properties
@@ -1,5 +1,5 @@
-path.variable.maven_repository=D\:/.m2/repository
-path.variable.user_home=E\:/.IntelliJIdea90
-path.variable.user_home_grails=D\:/.grails
-path.variable.user_home_griffon=D\:/.griffon
-idea.home=C\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 9.0.3
+path.variable.maven_repository=D:/.m2/repository
+path.variable.user_home=E:/.IntelliJIdea90
+path.variable.user_home_grails=D:/.grails
+path.variable.user_home_griffon=D:/.griffon
+idea.home=C:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 9.0.3
