--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -58,5 +58,6 @@ color.settings.globals=Global Variables
 color.settings.locals=Local Variables
 color.settings.field=Field
 color.settings.tailcall=Tail Call Returns
+color.settings.parameter=Parameter
 
 
