--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.9.3</version>
-    <!--##teamcity[buildNumber '0.9.3']-->
+    <version>0.9.4</version>
+    <!--##teamcity[buildNumber '0.9.4']-->
     <idea-version since-build="80.8000" until-build="98.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -62,8 +62,10 @@
         <html>
         <body>
         <dl>
+            <dt>0.9.1-4</dt>
+            <dd>Additional reference issues fixed</dd>
             <dt>0.9</dt>
-            <dd>Most reference issues are fixed</dd>
+            <dd>Most reference issues are fixed. QuickDocs</dd>
             <dt>0.8.33</dt>
             <dd>New inspection and some bugfixes.</dd>
             <dt>0.8.32</dt>
