--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.9.9</version>
-    <!--##teamcity[buildNumber '0.9.9']-->
+    <version>0.9.10</version>
+    <!--##teamcity[buildNumber '0.9.10']-->
     <idea-version since-build="80.8000" until-build="98.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -62,6 +62,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.9.10</dt>
+            <dd>Fixes an edge case where too many upvalues would cause an exception</dd>
             <dt>0.9.8-9</dt>
             <dd>Fixes for multiple inspection annotations</dd>
             <dt>0.9.1-7</dt>
