--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.9.10</version>
-    <!--##teamcity[buildNumber '0.9.10']-->
+    <version>0.9.11</version>
+    <!--##teamcity[buildNumber '0.9.11']-->
     <idea-version since-build="80.8000" until-build="98.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -33,6 +33,7 @@
 
         <p>Features:</p>
         <ol>
+            <li>Rename Identifier <b>Experimental</b></li>
             <li>Quick Documentation <b>Experimental</b></li>
             <li>JavaHelp For Lua 5.1</li>
             <li>Execution in the Kahlua interpreter</li>
@@ -62,6 +63,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.9.11</dt>
+            <dd>adds the rename identifier refactoring (experimental)</dd>
             <dt>0.9.10</dt>
             <dd>Fixes an edge case where too many upvalues would cause an exception</dd>
             <dt>0.9.8-9</dt>
