--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.9.13</version>
-    <!--##teamcity[buildNumber '0.9.13']-->
+    <version>0.9.14</version>
+    <!--##teamcity[buildNumber '0.9.14']-->
     <idea-version since-build="80.8000" until-build="99.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -64,6 +64,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.9.14</dt>
+            <dd>Performance enhancements</dd>
             <dt>0.9.13</dt>
             <dd>safe delete (experimental)</dd>
             <dt>0.9.12</dt>
