--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -33,7 +33,8 @@
 
         <p>Features:</p>
         <ol>
-            <!--<li>Safe Delete <b>Experimental</b></li>-->
+            <li>Goto Symbol <b>Experimental</b></li>
+            <li>Safe Delete <b>Experimental</b></li>
             <li>Rename Identifier <b>Experimental</b></li>
             <li>Quick Documentation <b>Experimental</b></li>
             <li>JavaHelp For Lua 5.1</li>
